release: prepare atius router v0.12.15.1
